fix missing color styles

--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -406,7 +406,7 @@ $bg-color-change-blue: #0059B1;
         align-items: center;
         column-gap: 7px;
         text-decoration: none;
-        color: #fff;
+        color: #202020;
 
         img {
           width: 25px;
